--- a/README
+++ b/README
@@ -91,8 +91,11 @@ Device driver API guidelines:
 Each driver should support the following block read/write functions
 where the addr parameter is optional.  Note the buffer is type void *
 so that any object can be read/written without casting.  Len is the
-transfer size in bytes.  The return value is the actual number of bytes
-read or written.  Dev is a handle created by foo_init.
+transfer size in bytes.  The return value is the actual number of
+bytes read or written.  Dev is a handle created by foo_init.  The
+readv and writev forms are for reading/writing using a vector of
+descriptors.  These forms are useful for coalescing I/O to minimise
+writes (say to flash memory) or for atomic operations.
 
 
 extern foo_ret_t
@@ -105,6 +108,10 @@ foo_write (foo_t dev, foo_addr_t addr, const void *buffer, foo_size_t len);
 
 extern foo_ret_t
 foo_writev (foo_t dev, foo_addr_t addr, iovec_t *iov, iovec_count_t iov_count);
+
+
+extern foo_ret_t
+foo_readv (foo_t dev, foo_addr_t addr, iovec_t *iov, iovec_count_t iov_count);
 
 
 
